# simtool

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README.md  pyproject.toml  pytest.ini  setup.py
examples/counter/: .gitignore  simtool.cfg
examples/counter/rtl/: adder.sv  counter.sv  shift_register.sv
examples/counter/tb/cocotb/: test_counter.py
examples/counter/tb/sv/: counter_tb.cpp  counter_tb.sv
scripts/: package.sh
simtool/: __init__.py  cli.py
src/: cli.py
src/cli_commands/: __init__.py  commands.py
src/core/: __init__.py  constants.py  exceptions.py  logging.py  plugin_system.py  project.py  validation.py
src/gui/: __init__.py  main.py
src/toolchain/: __init__.py  base.py  vcd_dpi.sv  vcd_dump.sv  verilator.py
src/ui/: __init__.py  colors.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_workflow.py
tests/unit/: __init__.py  test_project.py  test_verilator.py
