[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simtool"
version = "0.2.0"
authors = [
    {name = "Haridhayal Maheswaran", email = "haridhayal@gmail.com"},
]
description = "A CLI and GUI tool to bridge ModelSim workflows to open-source simulation tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
]
keywords = ["simulation", "hdl", "verilog", "systemverilog", "verilator", "cocotb", "eda"]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "colorama>=0.4.0",
    "cocotb>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/haridhayal11/simtool"
"Bug Tracker" = "https://github.com/haridhayal11/simtool/issues"
"Documentation" = "https://github.com/haridhayal11/simtool/blob/main/README.md"
"Source Code" = "https://github.com/haridhayal11/simtool"

[project.scripts]
simtool = "src.cli:main"
simtool-gui = "src.gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.toolchain" = ["*.sv", "*.cpp"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''